custom-apps/radarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: plex-support
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: radarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: radarr-config
                optional: false
          image: linuxserver/radarr
          imagePullPolicy: Always
          name: radarr
          resources:
            limits:
              memory: 500Mi
              cpu: 500m
          volumeMounts:
            - mountPath: /movies
              name: smb-movies
            - mountPath: /downloads
              name: smb-downloads
            - mountPath: /config
              name: config
      restartPolicy: Always
      hostAliases:
        - ip: "192.168.1.212"
          hostnames:
          - "smaba.finnhartshorn.com"
          - "irime.finnhartshorn.com"
          - "transmission.finnhartshorn.com"
      terminationGracePeriodSeconds: 30
      volumes:
        - persistentVolumeClaim:
            claimName: pvc-smb-radarr-movies
          name: smb-movies
        - persistentVolumeClaim:
            claimName: pvc-smb-radarr-downloads
          name: smb-downloads
        - persistentVolumeClaim:
            claimName: radarr-pvc-config
          name: config
