custom-apps/radarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: plex-support
spec:
  selector:
    app: radarr
  ports:
    - port: 7878
      protocol: TCP
      targetPort: 7878
  sessionAffinity: None
  type: ClusterIP
