custom-apps/radarr/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: radarr-ingressroute
  namespace: plex-support
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: "filmstrip"
    hajimari.io/appName: "Radarr"
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`radarr.finnhartshorn.com`)
    kind: Rule
    services:
    - name: radarr
      port: 7878
